--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heroes</title>
+    <link rel= "stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <div>
-<span>
-    <a href= "">Descuentos 20%</a>
-</span>
-    </div>
-    <div>
-<h1>
-    Heroes
-</h1>
-    </div>
-    <main>
-<section>
-    <span>Batman</span>
-<p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing
-<img src= "./img/fondo_batman.png" alt= "Fondo Batman">
-<img src="./img/batman_.png" alt= "foto_batman">
-</p>
-</section>
-    </main>
+    <header>
+        <div id="nav1"><a href= "">Descuentos 20%</a></div>
+        <h1>Heroes</h1>
+    </header>
+
+<main>
+    <section>
+        <div class= "bloque1">
+            <img id="fbatman"src= "./img/fondo_batman.png" alt="Fondo Batman" >
+            <img id="batman" src="./img/batman_.png" alt= "foto_batman">
+            <span id="title">Batman</span>
+            <p><span id= "textogrupo">Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing.</span></p>
+            <button><a href= "">Ver más</a></button>
+        </div>
+    </section>
+</main>
+
     <footer>
         <p>Todos los derechos reservados a FRONT END 1</p>
     </footer>
