--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </header>
 
 <main>
+    <div>
+    <!--
     <section>
         <div class= "bloque1">
             <img id="fbatman"src= "./img/fondo_batman.png" alt="Fondo Batman" >
@@ -23,11 +25,12 @@
             <p><span id= "textogrupo">Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing.</span></p>
             <button><a href= "">Ver más</a></button>
         </div>
-    </section>
+    </section>-->
+    </div>
 </main>
 
-    <footer>
+<footer>
         <p>Todos los derechos reservados a FRONT END 1</p>
-    </footer>
+</footer>
 </body>
 </html>
