--- a/index.html
+++ b/index.html
@@ -9,28 +9,35 @@
 </head>
 
 <body>
+
     <header>
         <div id="nav1"><a href= "">Descuentos 20%</a></div>
         <h1>Heroes</h1>
     </header>
 
-<main>
+<section>
     <div>
-    <!--
-    <section>
-        <div class= "bloque1">
+        <div id= "bloque1">
             <img id="fbatman"src= "./img/fondo_batman.png" alt="Fondo Batman" >
             <img id="batman" src="./img/batman_.png" alt= "foto_batman">
-            <span id="title">Batman</span>
+            <img id="fglobal"src= "./img/Rectangle_38.png" alt="fondodetexto">
+            <span><span id="title">Batman</span>
             <p><span id= "textogrupo">Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing.</span></p>
             <button><a href= "">Ver más</a></button>
+            </span>
         </div>
-    </section>-->
-    </div>
-</main>
+        
+        <div>
 
-<footer>
-        <p>Todos los derechos reservados a FRONT END 1</p>
-</footer>
+        </div>
+        <div>
+
+        </div>
+    </div>
+</section>
+
+<footer>Todos los derechos reservados a FRONT END 1</footer>
+
 </body>
+
 </html>
