cambios en bloque1

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img id="batman" src="./img/batman_.png" alt= "foto_batman">
             <img id="fglobal"src= "./img/Rectangle_38.png" alt="fondodetexto">
             <span><span id="title">Batman</span>
-            <p><div id= "textogrupo">Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing.</div></p>
+            <p><div id= "textogrupo1">Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing.</div></p>
             <button><a href= "">Ver más</a></button>
             </span>
         </div>
