--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heroes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--<script src="https://kit.fontawesome.com/7f6a69ff86.js" crossorigin="anonymous"></script>-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel= "stylesheet" href="css/styles.css">
 </head>
@@ -20,6 +21,8 @@
 <section>
     <div>
         <div id= "bloque1">
+            <!--<i class="fas fa-heart"></i>-->
+            <img id="heart"src= "./img/heart.png" alt="favorito" >
             <img id="fbatman"src= "./img/fondo_batman.png" alt="Fondo Batman" >
             <img id="batman" src="./img/batman_.png" alt= "foto_batman">
             <img id="fglobal"src= "./img/Rectangle_38.png" alt="fondodetexto">
