--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <header class="headerr">
+    <header><!--</header class="headerr"-->
         <div id="nav1"><a href= "">Descuentos 20%</a></div>
         <h1>Heroes</h1>
     </header>
