--- a/index.html
+++ b/index.html
@@ -5,44 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heroes</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
     <!--<script src="https://kit.fontawesome.com/7f6a69ff86.js" crossorigin="anonymous"></script>-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
     <link rel= "stylesheet" href="css/styles.css">
 </head>
 
 <body>
-
-    <header><!--</header class="headerr"-->
-        <div id="nav1"><a href= "">Descuentos 20%</a></div>
+    <div id="nav1"><a href= "">Descuentos 20%</a></div>
+    <header>
         <h1>Heroes</h1>
     </header>
 
 <section>
-    <div>
-        <div id= "bloque1">
-            <!--<i class="fas fa-heart"></i>-->
+    <div id= "bloque1">
             <img id="heart"src= "./img/heart.png" alt="favorito" >
             <img id="fbatman"src= "./img/fondo_batman.png" alt="Fondo Batman" >
             <img id="batman" src="./img/batman_.png" alt= "foto_batman">
             <img id="fglobal"src= "./img/Rectangle_38.png" alt="fondodetexto">
-            <span><span id="title">Batman</span>
+        <span><span id="title">Batman</span>
             <p><div id= "textogrupo1">Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing.</div></p>
             <button><a href= "">Ver más</a></button>
-            </span>
-        </div>
-        
-        <div>
-
-        </div>
-        <div>
-
-        </div>
+        </span>
     </div>
 </section>
 
 <footer>Todos los derechos reservados a FRONT END 1</footer>
 
 </body>
-
 </html>
