cambios en css y html 2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
 <section>
-    <div id= "bloque1">
+    <div id= "padre1">
             <img id="heart"src= "./img/heart.png" alt="favorito" >
             <img id="fbatman"src= "./img/fondo_batman.png" alt="Fondo Batman" >
             <img id="batman" src="./img/batman_.png" alt= "foto_batman">
