cambios en html y css 3

--- a/index.html
+++ b/index.html
@@ -12,23 +12,28 @@
 </head>
 
 <body>
-    <div id="nav1"><a href= "">Descuentos 20%</a></div>
+    <div class="nav1"><a href= "">Descuentos 20%</a></div>
     <header>
         <h1>Heroes</h1>
     </header>
 
-<section>
-    <div id= "padre1">
-            <img id="heart"src= "./img/heart.png" alt="favorito" >
-            <img id="fbatman"src= "./img/fondo_batman.png" alt="Fondo Batman" >
-            <img id="batman" src="./img/batman_.png" alt= "foto_batman">
-            <img id="fglobal"src= "./img/Rectangle_38.png" alt="fondodetexto">
-        <span><span id="title">Batman</span>
-            <p><div id= "textogrupo1">Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing.</div></p>
-            <button><a href= "">Ver más</a></button>
-        </span>
-    </div>
-</section>
+<main>
+    <section>
+        <article class= "padre1">
+            <div>
+                <img class="heart"src= "./img/heart.png" alt="favorito" >
+                <img class="fbatman"src= "./img/fondo_batman.png" alt="Fondo Batman" >
+                <img class="batman" src="./img/batman_.png" alt= "foto_batman">
+                <img class="fglobal"src= "./img/Rectangle_38.png" alt="fondodetexto">
+            </div>
+            <div>
+                <span class="title">Batman</span>
+                <p><div id= "textogrupo1">Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing.</div></p>
+                <button><a href= "">Ver más</a></button>
+            </div>
+        </article>
+    </section>
+</main>
 
 <footer>Todos los derechos reservados a FRONT END 1</footer>
 
