--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img class="fglobal"src= "./img/Rectangle_38.png" alt="fondodetexto">
             </div>
             <div>
-                <span class="title">Batman</span>
+                <p><div class="title">Batman</div></p>
                 <p><div id= "textogrupo1">Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing.</div></p>
                 <button><a href= "">Ver más</a></button>
             </div>
